--- a/static/src/stylesheets/_common.scss
+++ b/static/src/stylesheets/_common.scss
@@ -23,3 +23,5 @@
 @import 'module/experiments/_ab-low-friction-participation';
 @import 'module/experiments/_ab-join-discussion-after-poll';
 @import 'module/experiments/contributions';
+@import 'module/experiments/embed';
+@import 'module/experiments/svg';
