in article working nativley, just need to restyle a little

--- a/static/src/stylesheets/module/experiments/_embed.scss
+++ b/static/src/stylesheets/module/experiments/_embed.scss
@@ -27,15 +27,10 @@ $gs-gutter: 20px;
 
     }
 
-    ul {
+    .flex-container {
         padding: 0 0 16px 0;
         margin: 0;
         list-style: none;
-
-    }
-
-    li {
-        display: inline;
 
     }
 
