--- a/static/src/javascripts/projects/common/views/contributions-embed.html
+++ b/static/src/javascripts/projects/common/views/contributions-embed.html
@@ -1,39 +1,40 @@
-<div class="interactive-embed">
-    <input type="hidden" id="hidden-value" name="amount" class="js-amount js-amount-hidden" value=50>
-    <ul class="flex-container">
-        <li >
-            <h3 class="form__column-heading title">If you use it, if you like it, why not pay for it? It's only fair</h3>
-        </li>
-
-        <li >
-            <p class="form-section">If you use it, if you like it, why not pay for it? It's only fair. Please give  to the Guardian.</p>
-        </li>
-
-        <li class="amount_field">
-            <div>
-                <p class="p-cta">Make a one-off contribution:</p>
+<figure class="element element-interactive interactive element--<%=position%>">
+    <div class="interactive-embed">
+        <input type="hidden" id="hidden-value" name="amount" class="js-amount js-amount-hidden" value=50>
+        <div class="flex-container">
+            <div >
+                <h3 class="form__column-heading title">If you use it, if you like it, why not pay for it? It's only fair</h3>
             </div>
-            <div class="js-button-group button-group u-cf">
-                <button type="button" tabindex="8" class="js-button option-button option-button--bold" data-amount=25>
-                    <span class="currency js-currency">£</span>25
-                </button>
-                <button type="button" tabindex="8" class="js-button option-button option-button--bold active" data-amount=50>
-                    <span class="currency js-currency">£</span>50
-                </button>
-                <button type="button" tabindex="8" class="js-button option-button option-button--bold" data-amount=100>
-                    <span class="currency js-currency">£</span>100
-                </button>
-                <button type="button" tabindex="8" class="js-button option-button option-button--bold" data-amount=250>
-                    <span class="currency js-currency">£</span>250
-                </button>
-            </div>
-        </li>
-        <li >
-            <a class="js-submit-input option-button contribute action--contribute" href="https://contribute.theguardian.com/uk?INTCMP=co_uk_cobed_like_interactive&amount=50" target="_blank">
-                Contribute
-            </a>
-        </li>
-    </ul>
-</div>
 
+            <div >
+                <p class="form-section">If you use it, if you like it, why not pay for it? It's only fair. Please give  to the Guardian.</p>
+            </div>
+
+            <div class="amount_field">
+                <div>
+                    <p class="p-cta">Make a one-off contribution:</p>
+                </div>
+                <div class="js-button-group button-group u-cf">
+                    <button type="button" tabindex="8" class="js-button option-button option-button--bold" data-amount=25>
+                        <span class="currency js-currency">£</span>25
+                    </button>
+                    <button type="button" tabindex="8" class="js-button option-button option-button--bold active" data-amount=50>
+                        <span class="currency js-currency">£</span>50
+                    </button>
+                    <button type="button" tabindex="8" class="js-button option-button option-button--bold" data-amount=100>
+                        <span class="currency js-currency">£</span>100
+                    </button>
+                    <button type="button" tabindex="8" class="js-button option-button option-button--bold" data-amount=250>
+                        <span class="currency js-currency">£</span>250
+                    </button>
+                </div>
+            </div>
+            <div >
+                <a class="js-submit-input option-button contribute action--contribute" href="https://contribute.theguardian.com/uk?INTCMP=co_uk_cobed_like_interactive&amount=50" target="_blank">
+                    Contribute
+                </a>
+            </div>
+        </div>
+    </div>
+</figure>
 
