--- a/static/src/stylesheets/components/sass-mq/_mq.scss
+++ b/static/src/stylesheets/components/sass-mq/_mq.scss
@@ -33,6 +33,7 @@ $mq-responsive: true !default;
 /// @link https://github.com/sass-mq/sass-mq#seeing-the-currently-active-breakpoint Full documentation and examples
 $mq-breakpoints: (
     mobile:  320px,
+    phablet: 620px,
     tablet:  740px,
     desktop: 980px,
     wide:    1300px
@@ -67,7 +68,7 @@ $mq-static-breakpoint: desktop !default;
 /// @type map
 $mq-show-breakpoints: () !default;
 
-/// Customize the media type (e.g. `@media screen` or `@media print`)  
+/// Customize the media type (e.g. `@media screen` or `@media print`)
 /// By default sass-mq uses an "all" media type (`@media all and …`)
 ///
 /// @type String
