adjust spacefinder rules. Add control to test

--- a/static/src/javascripts/projects/common/views/contributions-embed.html
+++ b/static/src/javascripts/projects/common/views/contributions-embed.html
@@ -1,13 +1,14 @@
-<figure class="element element-interactive interactive element--<%=position%>">
+<figure class="element element-interactive interactive element--<%=position%> contribution-embed <%=bottomClass%>">
     <div class="interactive-embed">
         <input type="hidden" id="hidden-value" name="amount" class="js-amount js-amount-hidden" value=50>
         <div class="flex-container">
             <div >
-                <h3 class="form__column-heading title">If you use it, if you like it, why not pay for it? It's only fair.</h3>
+                <h3 class="form__column-heading title">Support our journalism</h3>
             </div>
 
             <div >
-                <p class="form-section">Please give to the Guardian by making a one-off contribution.</p>
+                <p class="form-section">If you use it, if you like it, why not pay for it? It's only fair. Please give to the Guardian.</p>
+                <p class="form-section">Make a one-off contribution:</p>
             </div>
             <div class="amount-field <%=bottomClass%>">
                 <div>
