--- a/static/src/stylesheets/module/experiments/_svg.scss
+++ b/static/src/stylesheets/module/experiments/_svg.scss
@@ -3,12 +3,12 @@
 //  See: http://codepen.io/tigt/post/optimizing-svgs-in-data-uris
 //
 //
-@function svg-url($svg){
+@function svg-url($svg) {
     //
     //  Chunk up string in order to avoid
     //  "stack level too deep" error
     //
-    $encoded:'';
+    $encoded: '';
     $slice: 2000;
     $index: 0;
     $loops: ceil(str-length($svg)/$slice);
@@ -17,15 +17,15 @@
         //
         //   Encode (may need a few extra replacements)
         //
-        $chunk: str-replace($chunk,'"','\'');
-        $chunk: str-replace($chunk,'<','%3C');
-        $chunk: str-replace($chunk,'>','%3E');
-        $chunk: str-replace($chunk,'&','%26');
-        $chunk: str-replace($chunk,'#','%23');
+        $chunk: str-replace($chunk, '"', '\'');
+        $chunk: str-replace($chunk, '<', '%3C');
+        $chunk: str-replace($chunk, '>', '%3E');
+        $chunk: str-replace($chunk, '&', '%26');
+        $chunk: str-replace($chunk, '#', '%23');
         $encoded: #{$encoded}#{$chunk};
         $index: $index + $slice;
     }
-    @return url("data:image/svg+xml;charset=utf8,#{$encoded}");
+    @return url('data:image/svg+xml;charset=utf8,#{$encoded}');
 }
 
 //  Helper function to replace characters in a string
@@ -33,8 +33,7 @@
     $index: str-index($string, $search);
     @if $index {
         @return str-slice($string, 1, $index - 1) + $replace +
-            str-replace(str-slice($string, $index +
-            str-length($search)), $search, $replace);
+        str-replace(str-slice($string, $index + str-length($search)), $search, $replace);
     }
     @return $string;
 }
