Add snap banner to promote Weekend Reading

--- a/static/src/stylesheets/content.scss
+++ b/static/src/stylesheets/content.scss
@@ -114,6 +114,7 @@
 // Consider head.*.scss instead
 
 @import 'module/experiments/_affix';
+@import 'module/experiments/_weekend-reading';
 
 /* ==========================================================================
    Icons
