Improve the data- component naming and the test description

--- a/static/src/javascripts/projects/common/views/experiments/weekend-reading-promo.html
+++ b/static/src/javascripts/projects/common/views/experiments/weekend-reading-promo.html
@@ -5,7 +5,7 @@
     <ul class="site-message__actions u-unstyled">
         <li class="site-message__actions__item">
             <%=arrowRight%>
-            <a href="<%=linkHref%>" target="_blank" data-link-name="habit weekendreading <%=variantName%>"><%=linkText%></a>
+            <a href="<%=linkHref%>" target="_blank" data-link-name="weekend-reading-signup"><%=linkText%></a>
         </li>
     </ul>
 </div>
