Move the comments state to discussion frontend

--- a/common/app/views/fragments/discussionFooter.scala.html
+++ b/common/app/views/fragments/discussionFooter.scala.html
@@ -3,7 +3,7 @@
 
 @sectionHeading = {
 
-    <div class="discussion__heading">
+    <div class="discussion__heading js-discussion-external-frontend">
 
         <div class="container__meta">
             <h2 class="container__meta__title">comments <span class="discussion__comment-count js-discussion-comment-count"></span></h2>
