made PR changes

--- a/static/src/javascripts/projects/common/views/contributions-embed.html
+++ b/static/src/javascripts/projects/common/views/contributions-embed.html
@@ -1,4 +1,4 @@
-<figure class="element element-interactive interactive element--<%=position%> contribution-embed <%=bottomClass%>">
+<figure class="element element-interactive interactive element--<%=position%> contribution-embed contribution-embed--<%=variant%>">
     <div class="interactive-embed">
         <input type="hidden" id="hidden-value" name="amount" class="js-amount js-amount-hidden" value=50>
         <div class="flex-container">
@@ -7,28 +7,28 @@
             </div>
 
             <div >
-                <p class="form-section">If you use it, if you like it, why not pay for it? It's only fair. Please give to the Guardian.</p>
-                <p class="form-section">Make a one-off contribution:</p>
+                <p class="contributions-paragraph form-section">If you use it, if you like it, why not pay for it? It's only fair. Please give to the Guardian.</p>
+                <p class="contributions-paragraph form-section">Make a one-off contribution:</p>
             </div>
-            <div class="amount-field <%=bottomClass%>">
+            <div class="amount-field amount-field--<%=variant%>">
                 <div>
                     <div class="js-button-group button-group u-cf">
-                        <button type="button" tabindex="8" class="js-button option-button option-button--bold <%=bottomClass%>" data-amount=25>
+                        <button type="button" class="js-button option-button option-button--bold option-button--<%=variant%>" data-amount="25">
                             <span class="currency js-currency">£</span>25
                         </button>
-                        <button type="button" tabindex="8" class="js-button option-button option-button--bold <%=bottomClass%> active" data-amount=50>
+                        <button type="button" class="js-button option-button option-button--bold option-button--<%=variant%> active" data-amount="50">
                             <span class="currency js-currency">£</span>50
                         </button>
-                        <button type="button" tabindex="8" class="js-button option-button option-button--bold <%=bottomClass%>" data-amount=100>
+                        <button type="button" class="js-button option-button option-button--bold option-button--<%=variant%>" data-amount="100">
                             <span class="currency js-currency">£</span>100
                         </button>
-                        <button type="button" tabindex="8" class="js-button option-button option-button--bold <%=bottomClass%>" data-amount=250>
+                        <button type="button" class="js-button option-button option-button--bold option-button--<%=variant%>" data-amount="250">
                             <span class="currency js-currency">£</span>250
                         </button>
                     </div>
                 </div>
                 <div >
-                    <a class="js-submit-input option-button <%=bottomClass%> contribute action--contribute" href="https://contribute.theguardian.com/uk?INTCMP=co_uk_cobed_like_interactive&amount=50" target="_blank">
+                    <a class="js-submit-input option-button contribute--<%=variant%> contribute action--contribute" href="https://contribute.theguardian.com/uk?INTCMP=<%=intCMP%>&amount=50" target="_blank">
                         Contribute
                     </a>
                 </div>
