change margins and borders to use gutter and baseline presets, update start and end date

--- a/static/src/javascripts/projects/common/views/contributions-embed.html
+++ b/static/src/javascripts/projects/common/views/contributions-embed.html
@@ -7,8 +7,8 @@
             </div>
 
             <div >
-                <p class="contributions-paragraph form-section">If you use it, if you like it, why not pay for it? It's only fair. Please give to the Guardian.</p>
-                <p class="contributions-paragraph form-section">Make a one-off contribution:</p>
+                <p class="contributions-paragraph">If you use it, if you like it, why not pay for it? It's only fair. Please give to the Guardian.</p>
+                <p class="contributions-paragraph">Make a one-off contribution:</p>
             </div>
             <div class="amount-field amount-field--<%=variant%>">
                 <div>
